--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
-<h2>Global Annual Mean Surface Air Temperature Change </h2>
-
 <div id="text">
+
+  <h2>Global Annual Mean Surface Air Temperature Change </h2>
 
   <br/>
 
@@ -17,5 +17,12 @@
   <div class="right_col">
     <div data-eval="main.coffee"></div>
   </div>
+
+  <div class="clear"></div>
+
+  <br>
+  <hr>
+  
+  Powered by <a href="http://puzlet.org/">Puzlet</a>.
 
 </div>
